<resources>
    <string name="app_name">WhatsMyMood</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to the follow hub -->
    <string name="users_following">Followers</string>
    <string name="users_followed">Following</string>
    <string name="follow_requests">Request</string>
    <string name="request_to_follow">Add</string>

    <!-- Strings related to the creating a user -->
    <string name="create_user">Create</string>
    <string name="cancel_create_user">Cancel</string>

    <!-- Strings related to the follow adapter -->
    <string name="username">Username</string>

    <!-- Strings related to the mood adapter -->
    <string name="mood_author">Author</string>
    <string name="mood_type">Mood</string>
    <string name="blank_message">No Message Entered</string>
    <string name="blank_social_sit">No Social Situation Entered</string>
    <string name="mood_date">Date</string>


    <!-- Strings related to the add mood popup -->
    <string name="enter_description">Enter Description Here</string>
    <string name="enter_location">No Location Added</string>
    <string name="enter_tag">Tag people you are with</string>
    <string name="enter_date">Enter the date</string>
    <string name="invalid_mood">Invalid Mood Selected</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="post">Post</string>

    <!-- Select mood drop down population -->
    <string-array name="mood_array">
        <item>Select a mood</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgusted</item>
        <item>Scared</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <!-- Mood Functions -->
    <string name="edit_mood">Edit Mood</string>
    <string name="delete_mood">Delete Mood</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_follow_hub">FollowHubActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
