<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_follow_hub"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.whatsmymood.FollowHubActivity">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/followList">
            <TextView
                android:id="@+id/following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_followed"
                android:textSize="30sp"/>
            <ListView
                android:id="@+id/followingList"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
            <TextView
                android:id="@+id/followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_following"
                android:textSize="30sp"/>
            <ListView
                android:id="@+id/followersList"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
            <TextView
                android:id="@+id/requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/follow_requests"
                android:textSize="30sp"/>
            <ListView
                android:id="@+id/requestsList"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add"/>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/request_to_follow"/>

</RelativeLayout>
