<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="375dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="#333333">

        <Spinner
            android:id="@+id/select_mood"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp"
            android:textAlignment="center"
            android:entries="@array/mood_array"
            android:background="@color/popup_background"/>

        <EditText
            android:id="@+id/enter_description"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:hint="@string/enter_descript"
            android:textSize="12sp"
            android:textColorHint="@color/popup_text"
            android:background="@color/popup_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/enter_description"
            android:weightSum="1"
            android:gravity="right">

            <EditText
                android:id="@+id/enter_location"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:hint="@string/enter_location"
                android:textSize="12sp"
                android:textColorHint="@color/popup_text"
                android:background="@color/popup_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/enter_description"
            android:weightSum="1"
            android:gravity="right">

            <EditText
                android:id="@+id/enter_tags"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:hint="@string/enter_tag"
                android:textSize="12sp"
                android:textColorHint="@color/popup_text"
                android:background="@color/popup_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/enter_description"
            android:weightSum="1"
            android:gravity="right">

            <EditText
                android:id="@+id/enter_date"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="70dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:hint="@string/enter_date"
                android:textSize="12sp"
                android:textColorHint="@color/popup_text"
                android:background="@color/popup_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/enter_description"
            android:weightSum="1"
            android:gravity="left">

            <Button
                android:id="@+id/buttonLoadPicture"
                android:layout_width="81dp"
                android:layout_height="63dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="20dp"
                android:background="@color/popup_background"
                android:drawableTop="@mipmap/camera"
                android:gravity="center"
                android:text="@string/upload_photo"
                android:textSize="12sp"
                android:textColor="@color/popup_text"
                android:textAllCaps="false">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/enter_description">

            <EditText
                android:id="@+id/post_mood"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:hint="@string/post"
                android:textSize="12sp"
                android:textColorHint="@color/popup_text"
                android:background="@color/popup_background"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>